src/filelist.scss
/**
 * @copyright Copyright (c) 2026 Sendent B.V.
 *
 * @author Sendent B.V. <info@sendent.com>
 *
 * @license AGPL-3.0-or-later
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

// Hide the "No files" empty state when securemail content is present
.sendent-hide-empty {
    display: none !important;
}

#sendent-content {
    display: block;
    margin: 0;
    padding: 0 16px 48px;
    max-width: 100%;
    width: 100%;
    box-sizing: border-box;

    .sendent-content__header {
        margin: 16px 0 8px;
        font-size: 16px;
        font-weight: bold;
        color: var(--color-main-text);
    }

    iframe {
        display: block;
        width: 100%;
        min-height: 120px;
        overflow: hidden;
        background-color: var(--color-main-background);
        border: 1px solid var(--color-border);
        border-radius: 8px;
    }
}

